--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -2,6 +2,7 @@
 {
 	height: 75px;
     background-color: #000000;
+     z-index: 2;
 }
 .navbar-nav
 {
@@ -14,6 +15,11 @@
 	 font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 	 font-weight: 700;
 	 font-size: 18px;
+}
+.navbar .nav .nav-item > a > i
+{
+    position: relative;
+    bottom: 8px;
 }
 .carousel-inner
 {
@@ -33,18 +39,33 @@
 	border-bottom: 1px solid #778899;
 }
 .heading
+{
+	text-align: center;
+}
+.row .col-sm-4 > button
+{
+	position: relative;
+	left: 7px;
+	top: 15px;
+}
+.row .col-sm-4 > form > input{
+	margin: auto;
+    width: 50%;
+ 
+}
+.cta-section > a >  img
 {  
 	
-	text-align: center;
+	height: 100px;
+	width: 100px;
 }
 .col-sm-4
 {
 	padding-bottom:  130px;
 
 }
-.col-sm-4 > a > img
+.row .heading > form > input
 {
-	
 	height: 280px;
 	width: 210px;
 }
@@ -78,7 +99,7 @@
 	
 }
 .hidden-xs{
-	background-color: #4d4d4d;
+	 background: linear-gradient(to top, black, grey);
 }
 .hidden-xs  ul  li  a
 {
@@ -91,15 +112,73 @@
 	  left: 50px;
 	  padding-top: 10px;
 }
-.social-media
+.hidden-xs .socialNetwork
 {
-	background-color: #4d4d4d;
-	padding: 80px;
-	
+   display: inline;
 }
 #copyright
 {
 	background-color: #1a1a1a;
 	padding: 8px;
 	color: #f0f0f0;
+}
+.cta-section {
+  background: #253340 url('../images/bg-footer-1.jpg') no-repeat left top;
+  background-size: cover;
+  min-height: 420px;
+  color: #fff;
+  padding-top: 80px;
+  border: none;
+}
+.cta-section > a
+{
+	padding: 10px;
+}
+.navbar .nav  > a.dropdown-toggle:before {
+  display: none;
+}
+
+.navbar .nav .dropdown-menu {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  margin: 0;
+  border: none;
+  text-transform: none;
+  min-width: 180px;
+  background: #253340;
+}
+.navbar .nav .dropdown-menu :before {
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #253340;
+  position: absolute;
+  right: 30px;
+  top: -10px;
+}
+.navbar .nav .dropdown-menu  a {
+  border-bottom: 1px solid #212e3a;
+  padding: 8px 20px;
+  color: #fff;
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
+}
+.navbar .nav .dropdown-menu  a:hover {
+  background: #2e4050;
+  color: #fff;
+}
+.total
+{
+	position: absolute;
+	top: 500px;
 }
